--- a/tool/Cargo.toml
+++ b/tool/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.3", features = [ "derive", "env" ] }
+json-digest = "0.0.16"
+lazy_static = "1.4.0"
 serde = { version = "1.0.197", features = [ "derive" ] }
 serde_json = "1.0.114"
 thiserror = "1.0.58"
