--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,10 @@ axum = "0.7.5"
 bb8 = "0.8.3"
 bb8-postgres = "0.8.1"
 chrono = { version = "0.4.35", features = ["serde"] }
-serde = "1.0.197"
+clap = { version = "4.5.4", features = ["env", "derive"] }
+lazy_static = "1.4.0"
+postgres-from-row = "0.5.2"
+serde = { version = "1.0.197", features = ["derive"] }
 thiserror = "1.0.58"
 tokio = { version = "1.36.0", features = ["full"] }
-tokio-postgres = "0.7.10"
+tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
