--- a/tool/Cargo.toml
+++ b/tool/Cargo.toml
@@ -11,4 +11,5 @@ json-digest = "0.0.16"
 lazy_static = "1.4.0"
 serde = { version = "1.0.197", features = [ "derive" ] }
 serde_json = "1.0.114"
+shell-quote = "0.5.0"
 thiserror = "1.0.58"
