--- a/tool/Cargo.toml
+++ b/tool/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 clap = { version = "4.5.3", features = [ "derive", "env" ] }
 json-digest = "0.0.16"
 lazy_static = "1.4.0"
+log = "0.4.21"
 serde = { version = "1.0.197", features = [ "derive" ] }
 serde_json = "1.0.114"
+simple_logger = { version = "4.3.3", features = ["colored", "colors"] }
 thiserror = "1.0.58"
